2009-11-04  Kelly Norton  <knorton@google.com>

        Reviewed by Pavel Feldman.

        Adds lightweight network resources to InspectorTimelineAgent.
        https://bugs.webkit.org/show_bug.cgi?id=31065

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::willSendRequest):
        (WebCore::InspectorController::didReceiveResponse):
        (WebCore::InspectorController::didFinishLoading):
        (WebCore::InspectorController::didFailLoading):
        * inspector/InspectorTimelineAgent.cpp:
        (WebCore::InspectorTimelineAgent::willSendResourceRequest):
        (WebCore::InspectorTimelineAgent::didReceiveResourceResponse):
        (WebCore::InspectorTimelineAgent::didFinishLoadingResource):
        * inspector/InspectorTimelineAgent.h:
        (WebCore::):
        * inspector/TimelineRecordFactory.cpp:
        (WebCore::TimelineRecordFactory::createResourceSendRequestTimelineRecord):
        (WebCore::TimelineRecordFactory::createResourceReceiveResponseTimelineRecord):
        (WebCore::TimelineRecordFactory::createResourceFinishTimelineRecord):
        * inspector/TimelineRecordFactory.h:
        * inspector/front-end/TimelineAgent.js:

2009-11-04  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] ASSERT failure when receiving 401 HTTP Authentication response.
        https://bugs.webkit.org/show_bug.cgi?id=31077

        Allow sending the response body under the same conditions that we
        allow it to finish without reporting an error.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):

2009-11-04  Adam Roben  <aroben@apple.com>

        Sort WebCore.base.exp

        Rubber-stamped by Dan Bernstein.

        * WebCore.base.exp: Sorted.

2009-11-04  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed rollout.

        Revert r50496 because it broke all layout tests on QtBuildBot.

        * WebCore.pro: